syntax = "proto3";

option java_package = "com.dd.protobuf"; 
option java_outer_classname = "PlayerProtocol";

import "PBStruct.proto";

//获取（刷新）玩家信息
message CSPlayerInfo
{	
	string uid = 1;
    string gaid = 2;
	string platform = 3;
	string country = 4;	
}

message SCPlayerInfo
{	
	PBPlayerInfo playerInfo = 1;
}

//获取玩家信息
message CSPlayerInfos
{	
	repeated PBPlayerInfo players = 1;
}

message SCPlayerInfos
{	
	repeated PBPlayerInfo playerInfo = 1;
}

//注册
message CSRegister
{
}

message SCRegister 
{	
	PBPlayerInfo PlayerInfo = 1;
}